--- a/calendar-style.css
+++ b/calendar-style.css
@@ -90,6 +90,7 @@ nav a:hover {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   gap: 0.1vw;
+
 }
 
 .day {
@@ -101,7 +102,13 @@ nav a:hover {
 }
 
 .day.empty {
-  background-color: #f2f2f2;
+  border: 1px solid #ccc;
+  padding: 0.5vw;
+  color: #2c3e50;
+  background-color: #2c3e50;
+  text-align: center;
+  font-size: 80%;
+  min-height: 30px;
 }
 
 .highlight {
